...
    path: '/',
  },
  Help: {
    screen: HelpScreen,
    path: '/',
  },
  Other: {
    screen: RestScreen,
    path: '/',
  }
};

const tabbarOption = {
...
