...
                                    <Text style={styles.titleText}>{title}</Text>
                                </View>
                            ) : null}
                            <View style={styles.btnWrapper}>
                                {/* Белая кнопка */}
                                {textBtnWhite ? (
                                    <TouchableOpacity onPress={functionBtnWhite} style={styles.btnWhite} testID="leftBtnPopupID" accessibilityLabel="leftBtnPopupID"    >
                                        <Text style={[styles.textBtn, { color: '#1459D2' }]}>{textBtnWhite}</Text>
                                    </TouchableOpacity>
                                ) : null}
                                {/* Синяя кнопка */}
                                {textBtn ? (
                                    <TouchableOpacity onPress={functionBtn} style={styles.btn} testID="rightBtnPopupID" accessibilityLabel="rightBtnPopupID" >
                                        <Text style={[styles.textBtn, { color: '#FFFFFF' }]}>{textBtn}</Text>
                                    </TouchableOpacity>
                                ) : null}
                                {/*  */}
                            </View>
                        </View>
...
