...
                            setCheckedBox={setRegistrationCheckbox}
                            textWithClick={local["user agreement"]}
                            text={local["I have read and agree with"]}
                        />
                        <ButtonSubmit
                            text={local.Registration}
                            testID="ButtonSubmitRegistrationID"
                            isDisabled={isRegistrationButtomDisabled}
                            isShowSpiner={registrationSpiner}
                            onPress={this.sendRegistrationData}
                        />
                    </View>
                    {/* <LoginFacebook/> */}
...
