...
                        selectionColor="#5A6772"
                        placeholderTextColor='#9FA0B2'
                        underlineColorAndroid='transparent'
                        onChangeText={this.checkValue}
                        style={[styles.textinput, currentLanguageName === 'ar' ? styles.textinputWithTextAlightRight : null]}
                        placeholder={placeholder} />
                    <TouchableOpacity onPress={this.setSecureTextEntry} testID="BtnShowPassAuthorizationID" accessibilityLabel="BtnShowPassAuthorizationID">
                        {isSecureTextEntry ? <Dontshow /> : <Show />}
                    </TouchableOpacity >
                </View>
                <WarningInputText isShowWarningText={isShowWarning} text={errorText} testID={textErrorID} />
            </View>
        )
...
