...
    "ru": {
        'noMessage':'Уведомлений нет',
        'regPopUp':'Ваш пароль отправлен на указанную почту',
        'helpSearch': 'Введите слова поиска',
        'Catalog': 'Каталог',
        'Help': 'Помощь',
        'Other': 'Прочее',
        'Favorites': 'Избранное',
        'Glossary': 'Словарь',
        'ContactBroker': 'Связь с брокером',
        'OurApps': 'Торговое приложение',
        'OurWebsite': 'Наш сайт',
        'LanguagePreference': 'Выбор языка',
...
        "Specification": "Detalles",
        "Instruments": "Herramientas",
        "Session": "Sesion",
        "Time": "Tiempo",
        "Home": "Inicio",
        "Settings": "Ajustes",
        "News": "Noticias",
        'Buy': 'Comprar',
        'Sell': 'Vender',
        'Neutral': 'Neutral',
        'Quote': 'Cita',
        'Indicators': 'Indicadores',
        'MovingAverages': 'Promedios moviles',
...
